--- a/app/views/cargos/_form.html.erb
+++ b/app/views/cargos/_form.html.erb
@@ -7,7 +7,7 @@
   <div class="panel-body">
     <div class="row">
       <div class="col-xs-12">
-        <div class="col-xs-6 <%='has-error' if @cargo.errors.keys.include?(:nombre) ==true %>">
+        <div class="col-xs-6 <%='has-error' if @cargo.errors.keys.include?(:nombre) ==true %> <%='has-success' if (@cargo.errors.keys.include?(:nombre) ==false and @cargo.errors.any?)%>"  >
           <%= f.label :nombre,class: "control-label"  %><br>
           <div class="form-group input-group">
             <span class="input-group-addon">
@@ -16,7 +16,7 @@
             <%= f.text_field :nombre, class: "form-control input-text", autofocus:""%>
           </div>
         </div>
-        <div class="col-xs-6 <%='has-error' if @cargo.errors.keys.include?(:departamento_id) ==true %>">
+        <div class="col-xs-6 <%='has-error' if @cargo.errors.keys.include?(:departamento_id) ==true %> <%='has-success' if (@cargo.errors.keys.include?(:departamento_id) ==false and @cargo.errors.any?)%>">
           <%= f.label :departamento_id,class: "control-label"  %><br>
           <div class="form-group input-group">
             <span class="input-group-addon">
@@ -28,7 +28,7 @@
             "data-content"=>"Este campo no podrá ser editado despúes de guardar.","#{d}": true)  %>
           </div>
         </div>
-        <div class="col-xs-6 <%='has-error' if @cargo.errors.keys.include?(:tipo_id) ==true %>">
+        <div class="col-xs-6 <%='has-error' if @cargo.errors.keys.include?(:tipo_id) ==true %> <%='has-success' if (@cargo.errors.keys.include?(:tipo_id) ==false and @cargo.errors.any?)%>">
           <%= f.label :tipo_id,class: "control-label"  %><br>
           <div class="form-group input-group">
             <span class="input-group-addon">
@@ -42,7 +42,7 @@
         </div>
         <%= f.fields_for :sueldos  do |sueldo_builder|  %>
         <% if sueldo_builder.object.activo? %>
-        <div class="col-xs-6 <%='has-error' if @cargo.errors.keys.include?(:'sueldos.monto') ==true %>">
+        <div class="col-xs-6 <%='has-error' if @cargo.errors.keys.include?(:'sueldos.monto') ==true %> <%='has-success' if (@cargo.errors.keys.include?(:'sueldos.monto') ==false and @cargo.errors.any?)%>">
           <%= sueldo_builder.label :monto,class: "control-label"  %>
           <div class="form-group input-group">
             <span class="input-group-addon">
@@ -51,7 +51,7 @@
             <%= sueldo_builder.text_field :monto,class: "form-control"%>
           </div>
         </div>
-        <div class="col-xs-6 <%='has-error' if @cargo.errors.keys.include?(:'sueldos.sueldo_integral') ==true %>">
+        <div class="col-xs-6 <%='has-error' if @cargo.errors.keys.include?(:'sueldos.sueldo_integral') ==true %> <%='has-success' if (@cargo.errors.keys.include?(:'sueldos.sueldo_integral') ==false and @cargo.errors.any?)%>">
           <%= sueldo_builder.label :sueldo_integral,class: "control-label"  %>
           <div class="form-group input-group">
             <span class="input-group-addon">
