--- a/app/views/cargos/_cargo.html.erb
+++ b/app/views/cargos/_cargo.html.erb
@@ -2,8 +2,8 @@
 <%if p.length>0%>
 
   <div class="table-responsive">
-        <table class="table table-hover table-bordered table-condensed table-striped">
-          
+        <table class="table table-hover table-bordered table-condensed table-striped" style="font-size: 12px;">
+
       <thead>
         <tr>
           <th class="actions">Nombre</th>
