--- a/app/views/requisitos/index.html.erb
+++ b/app/views/requisitos/index.html.erb
@@ -42,3 +42,6 @@
   </div>
   <%end%>
 </ul>
+<div  class="col-xs-12 actions">
+<%= link_to raw('<i class="fa fa-arrow-circle-left"></i> Regresar'), personas_path, class: "btn btn-default btn-md boton" %>
+</div>
