--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -70,7 +70,7 @@
         </h4>
       </div>
       <div class="panel-footer back-footer-red">
-        <div>Enviar Reporte a todos.</div>
+        <div>Enviar Reporte a Todos</div>
       </div>
     </div>
   </div>
