--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -63,9 +63,9 @@
                 <i class="fa fa-envelope fa-5x"></i>
                 <h4>
                     <div class="btn-group btn-group-xs form-inline" role="group" aria-label="...">
-                        <a href="#" class="btn btn-default bg-color-red btn-xs " id="enviar_recibos">Quincena Actual</a>
+                        <div class="btn btn-default bg-color-red btn-xs " id="enviar_recibos">Quincena Actual</div>
 
-                        <a href="#" class="btn btn-default bg-color-red btn-xs " id="enviar_recibos_pasada">Pasada</a>
+                        <div class="btn btn-default bg-color-red btn-xs " id="enviar_recibos_pasada">Pasada</div>
                     </div>
                 </h4>
             </div>
@@ -92,7 +92,7 @@
 </br>
 <%
 #pruebaaa
-  @personas= Persona.activo
+  @personas= Persona.where('status = ? OR status = ?',"activo","suspendido").order(:id)
 @personas.each do |persona|
   %>
 <input type="hidden" class="persona" value="<%=persona.id%>">
@@ -101,7 +101,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header  text-center">
-                <i class="fa fa-refresh fa-spin fa-5x fa-fw margin-bottom"></i>
+                <i class="fa fa-refresh fa-spin fa-5x fa-fw margin-bottom" id="progreso_icon"></i>
                 <span class="sr-only">Loading...</span>
             </div>
             <div class="modal-footer">
@@ -111,7 +111,7 @@
     </div>
 </div>
 </input>
-<!--<%
+<%
 fecha=""
 if $quincena==0
 
@@ -128,9 +128,15 @@ end
 <script type="text/javascript">
 
 function s(x,y) {
-//  $('#enviar').modal("show");
+$('#enviar').modal("show");
   $("#progreso").html("progreso: " + x + "/" + $('.persona').length)
   $.ajax({
+    statusCode: {
+    500: function() {
+      $("#progreso").html("Error interno!");
+      $("#progreso_icon").attr("class","fa fa-ban fa-5x");
+    }
+  },
     method: "POST",
     url: "/personas/" + $('.persona')[x].value + "/enviar?ahora="+y
   }).done(function () {
@@ -139,49 +145,23 @@ function s(x,y) {
 
       s(x,y);
     } else {
-      $('#enviar').modal("hide");
+      $("#progreso").html("Todos los recibos enviados!");
+      $("#progreso_icon").attr("class","fa fa-check fa-5x");
+
     }
   });
 }
 $(function () {
   $('#enviar_recibos_pasada').click(function () {
 
-
+$("#progreso_icon").attr("class","fa fa-refresh fa-spin fa-5x fa-fw margin-bottom");
     s(0,"<%= fecha%>");
 
   });
   $('#enviar_recibos').click(function () {
-
+$("#progreso_icon").attr("class","fa fa-refresh fa-spin fa-5x fa-fw margin-bottom");
     s(0,'<%="#{$ahora.day}-#{$ahora.mon}-#{$ahora.year}" %>');
 
   });
-});
-</script>-->
-
-<script type="text/javascript">
-
-function s(x) {
-    $("#progreso").html("progreso: " + x + "/" + $('.persona').length)
-    $.ajax({
-        method: "POST",
-        url: "/personas/" + $('.persona')[x].value + "/enviar"
-    }).done(function () {
-        x = x + 1
-        if (x < $('.persona').length) {
-
-            s(x);
-        } else {
-
-            $('#enviar').modal("hide");
-        }
-    });
-}
-$(function () {
-    $('#enviar_recibos').click(function () {
-
-        $('#enviar').modal({backdrop: false});
-        s(0);
-
-    });
 });
 </script>
