--- a/app/views/conceptos/_concepto.html.erb
+++ b/app/views/conceptos/_concepto.html.erb
@@ -5,7 +5,7 @@
     <%if Concepto.all.where(tipo_de_concepto:x).length>0%>
     <div class="panel-body">
         <div class="table-responsive text-center">
-            <table class="table  table-condensed table-hover table-responsive table-bordered ">
+            <table class="table  table-condensed table-hover table-responsive table-bordered " style="font-size: 12px;">
                 <thead>
                     <tr>
                         <th class="actions">Nombre</th>
