--- a/app/views/conceptos/show.html.erb
+++ b/app/views/conceptos/show.html.erb
@@ -13,7 +13,7 @@
     </b>
     <% @concepto.tipos.each do |tipo|
       %>
-    <span class="label label-info"><%= tipo.nombre%></span>
+    <span class="label label-info"><%= tipo.nombre.upcase%></span>
     <% end%></h4>
 
 <%
