--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>FUNSONE NÓMINA - Versión: Beta 1</title>
+    <title>FUNSONE NÓMINA</title>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true%>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true%>
     <%=favicon_link_tag 'favicon.png', rel: 'shortcut icon', type: 'image/png'%>
