--- a/app/views/persona_mailer/recibo.text.erb
+++ b/app/views/persona_mailer/recibo.text.erb
@@ -1,1 +1,1 @@
-Hola, #{persona.nombres.upcase} #{persona.apellidos.upcase} , te enviamos el recibo del pago de nomina correspondiente a la #{$dic["quincena"].key($quincena).capitalize} #{$dic["meses"].key($ahora.month)}/#{$ahora.year}.
+Hola, #{persona.nombres.upcase} #{persona.apellidos.upcase} , te enviamos el recibo del pago de nómina correspondiente a la #{$dic["quincena"].key($quincena).capitalize} #{$dic["meses"].key($ahora.month)}/#{$ahora.year}.
