--- a/app/views/tipos/index.html.erb
+++ b/app/views/tipos/index.html.erb
@@ -151,12 +151,12 @@ Generar</button>
 <%if Tipo.all.length>0%>
 <div class="table-responsive">
 
-<table class="table table-hover table-bordered table-condensed table-striped">
+<table class="table table-hover table-bordered table-condensed table-striped" style="font-size: 12px;" >
 <thead>
 <th class="actions">Nombre</th>
 <th class="actions">Personas</th>
-<th class="actions" style="width: 32%;">Reportes</th>
-<th class="actions" style="width: 18%;">Listados</th>
+<th class="actions" style="width: 34%;">Reportes</th>
+<th class="actions" style="width: 20%;">Listados</th>
 <% if !current_usuario.has_role?:regular%>
 <th class="actions" style="width: 100px;">Acciones</th>
 <%end%>
@@ -203,12 +203,8 @@ Generar</button>
 </tbody>
 </table>
 <br>
-<br>
 </div>
-
 </li>
-</br>
-</br>
 </br>
 </ul>
 
@@ -217,7 +213,7 @@ Generar</button>
 function generar(eco) {
 
   if ($('#Tipo').val() == '') {
-    alert('Seleccione una opcion en el campo nomina.');
+    alert('Seleccione una opcion en el campo nómina.');
     return;
   }
   if ($('#tipo_de_reporte').val() == '') {
